<resources>
    <string name="app_name">CervaMania</string>
    <string name="bntBotaoCervejaToolbar">Cerveja</string>
    <string name="btnBotaoCameraToolbar">Câmera</string>
    <string name="estilo_cerveja">Estilo</string>
    <string name="paises_cerveja">Países</string>
    <string name="classificacao_cerveja">Classificação</string>
    <string name="historicoCerveja1">Cerveja é uma bebida alcoólica carbonatada, produzida através da fermentação de materiais com amido, principalmente cereais maltados como a cevada e o trigo. Seu preparo inclui água como parte importante do processo, e algumas receitas levam ainda lúpulo e fermento, além de outros temperos, como frutas, ervas e outras plantas. Dentro desta definição de cerveja encontram-se diversas variedades, de acordo com fatores como método de produção, ingredientes usados, cor, sabor, aroma, receita, história, origem e assim por diante. Os primeiros registros da fabricação de cerveja situam-se na antiga Suméria, na antiga Mesopotâmia, por volta de 4000 a.C. Provavelmente, a descoberta da cerveja foi acidental, tendo ocorrido quando algum pedaço de pão de centeio se estragou e passou a apresentar um sabor diferente e agradável, fruto da fermentaçao alcoólica. Mais tarde, o que havia sido acidental foi transformado num processo padronizado de fabricação. O malte, constituído por grãos de cevada germinados, era moído, misturado com água e assado. Do pão resultante eram retirados pedaços que eram deixados em água, ocorrendo então a fermentação alcoólica que gerava a cerveja.</string>
    <string name="historicoCerveja2">Um passo importante para a fabricação de Cerveja, foi a criação na Alemanha, em 23 de Abril de 1516, da Reinheitsgebot ou Lei da Pureza da Cerveja, que instituiu que a cerveja deveria ser fabricada apenas com os seguintes ingredientes: água, malte de cevada e lúpulo. A levedura de cerveja não era conhecida na época. Atualmente, devido a regulamentação europeia, outros ingredientes são autorizados nas cervejas alemãs, mas a maioria dos cervejeiros alemães continua a seguir as prescrições do Reinheitsgebot, consideradas garantia de qualidade. Isto acontece principalmente nas marcas vendidas em território alemão. Cervejas de exportação ou fabricadas em outros países, como a Bélgica não se utilizam dessa regra, incorporando outros ingredientes como frutas a receita.</string>
    <string name="menuHistoricoCerveja">Histórico</string>
    <string name="bottomItemHistorico">Histórico</string>
    <string name="bottomItemEstilos">Estilos</string>
    <string name="txtAlemanha">Alemanha</string>
    <string name="txtAustralia">Austrália</string>
    <string name="txtBelgica">Bélgica</string>
    <string name="txtDinamarca">Dinamarca</string>
    <string name="txtEstadosUnidos">Estados Unidos</string>
    <string name="txtInglaterra">Inglaterra</string>
    <string name="txtItalia">Itália</string>
    <string name="txtLibano">Líbano</string>
    <string name="txtNovaZelandia">Nova Zelândia</string>
    <string name="txtRepublicaTcheca">República Tcheca</string>
    <string name="txtArgentina">Argentina</string>
    <string name="txtAustria">Áustria</string>
    <string name="txtBrasil">Brasil</string>
    <string name="txtEspanha">Espanha</string>
    <string name="txtHolanda">Holanda</string>
    <string name="txtIrlanda">Irlanda</string>
    <string name="txtJamaica">Jamaica</string>
    <string name="txtMexico">México</string>
    <string name="txtPortugal">Portugal</string>
    <string name="txtUruguai">Uruguai</string>
    <string name="txtStardartAmericanLager">Standart American Lager</string>
    <string name="txtAmberLager">Amber Lager</string>
    <string name="txtViennaLager">Vienna Lager</string>
    <string name="txtPilsener">Pilsener</string>
    <string name="txtPremium">Premium</string>
    <string name="txtHelles">Helles</string>
    <string name="txtMunchnerDunkel">Munchner Dunkel</string>
    <string name="txtDarkAmericanLager">Dark American Lager</string>
    <string name="txtSchwarzbier">Schwarzbier</string>
    <string name="txtBock">Bock</string>
    <string name="txtDoppelbock">Doppelbock</string>
    <string name="txtAmericanPaleAle">American Pale Ale</string>
    <string name="txtExtraSpecialBitter">Extra Special Bitter</string>
    <string name="txtBelgianPaleAle">Belgian Pale Ale</string>
    <string name="txtBelgianBlondAle">Belgian Blond Ale</string>
    <string name="txtBelgianSpecialtyAle">Belgian Specialty Ale</string>
    <string name="txtIndiaPaleAle">India Pale Ale</string>
    <string name="txtRedAle">Red Ale</string>
    <string name="txtBrownAle">Brown Ale</string>
    <string name="txtDubbel">Dubbel</string>
    <string name="txtTripel">Tripel</string>
    <string name="txtQuadrupel">Quadrupel</string>
    <string name="txtGoldenStrongAle">Golden Strong Ale</string>
    <string name="txtDarkStrongAle">Dark Strong Ale</string>
    <string name="txtWeissbier">Weissbier</string>
    <string name="txtWeizenbock">Weizenbock</string>
    <string name="txtDunkelweizen">Dunkelweizen</string>
    <string name="txtWitbier">Witbier</string>
    <string name="txtStout">Stout</string>
    <string name="txtPorter">Porter</string>
    <string name="txtCamera1">Não encontrou a cerveja que procurava?</string>
    <string name="txtNaoEncontrado">\??????????</string>
    <string name="txtEstiloCerveja">Estilo:</string>
    <string name="txtPaisCerveja">País:</string>
    <string name="txtCervejariaCerveja">Cervejaria:</string>
    <string name="txtTeorCerveja">Teor:</string>
    <string name="txtIngredientesCerveja">Ingredientes:</string>
    <string name="txtTemperaturaCerveja">Temperatura Ideal:</string>
    <string name="txtColoracaoCerveja">Coloração:</string>
    <string name="txtDescricaoCerveja">Descricao:</string>
    <string name="txtMandeSuaFoto">Não encontrou a cerveja pesquisada?? Mande uma foto!</string>
    <string name="txtDescricaoStardartAmericanLager">Lager é um tipo de cerveja fermentada e armazenada em baixas temperaturas. A fermentação desse tipo de cerveja é feita pela levedura "Saccharomyces pastorianus" e ocorre em temperaturas baixas, que ficam entre 5ºC - 14ºC, com graduação alcoólica geralmente entre 4 e 5%. Essa levedura é chamada de levedura de baixa fermentação. Atualmente representa 90% do consumo mundial de cerveja. Juntamente com as Ale e as Lambic, Lager é uma das três grandes famílias de cervejas, que inclui diversos subtipos, como por exemplo, Pale lager, Dark lager e Bock, Pilsener As cervejas de tipo lager são diferenciadas das cervejas de tipo Ale pelo fermento usado durante o seu processo de fabricação. O fermento utilizado nas Lagers inicia a fermentação em temperaturas mais baixas (7 - 12 ºC), o que faz com que ele se acumule no fundo do tanque de fermentação. Já as cervejas Ale utilizam um tipo de fermento que inicia o processo de fermentação a temperaturas mais elevadas (15 - 24 ºC) levando-o a se acumular no topo do tanque de fermentação. São essas diferenças que fazem com que as cervejas de tipo Ale sejam conhecidas como cervejas de "alta fermentação" e as Lager como de "baixa fermentação". Como a definição moderna do termo Lager se relaciona apenas com o método de fermentação utilizado, as cervejas Lager possuem características extremamente variadas. Tradicionalmente, no entanto, a Lager padrão é uma cerveja de coloração clara, normalmente representada pelas Pale Lager ou pelas Pilsener. Este tipo de Lager normalmente possui um sabor levemente amargo, sendo recomendado que sejam servidas geladas. As cervejas tipo Lager possuem um sabor bastante simplificado quando comparadas com as Ale que, em geral, possuem um sabor mais frutado. Isso é decorrente do fato das baixas temperaturas necessárias para a fabricação das Lager fazerem com que a levedura produza menos éster e fenol, compostos químicos e orgânicos associados aos sabores mais frutados. American lager é um estilo de Pale Lager que é considerado o estilo de cerveja mais produzido e consumido no mundo. As Pale Lager tiveram sua origem na Europa em meados do século 19, e chegaram aos Estados Unidos e ao Brasil com os imigrantes alemães. Como uma tendência geral fora da Baviera e da República Checa, onde as cervejas tendem a ser fortemente lupuladas, as cervejas Pale Lager se desenvolveram como uma cerveja modestamente lupulada, e por vezes utilizando adjuntos como arroz ou milho, para prover um corpo mais leve e diminuir os custos de produção. São cervejas com pouco aroma de malte,de lúpulo e da levedura, apresentam coloração que varia de palha a amarelo claro, transparente e com espuma branca. É o tipo das cervejas mais populares dos Estados Unidos, com exemplos como Budweiser, Coors e a australiana Fosters. A maioria das cervejas populares no Brasil, como Brahma, Skol, Antarctica, são American Lagers, mesmo que elas se intitulem no rótulo e descrição no verso como Pilsen, talvez até devido a convenção nacional para a classificação de cervejas.</string>
    <string name="txtDescricaoAmberLager">As Amber Lagers estão dentro do grupo de cervejas puramente lager, produzidas através do processo de baixa fermentação. A primeira coisa que chama a atenção quando uma Amber Lager sai da garrafa é a sua cor. Como o próprio nome nos conta, é uma cor âmbar de pouca variação entre diferentes marcas, podendo ser mais clara ou mais escura. Em sua composição, variados tipos de maltes e lúpulos conferem o tom característico, o que também se aplica ao sabor e aroma. No paladar, o sabor é puxado para o adocicado, com um final levemente amargo (apesar de algumas terem o amargor mais acentuado, mas nada que incomode os mais sensíveis). Para finalizar, seu aroma exalta todos os maltes da receita, compondo uma cerveja que encanta todos os seus sentidos.</string>
    <string name="txtDescricaoViennaLager">Se distigue por uma coloração Ambar, o estilo Vienna Lager foi criado por Anton Dreher em Viena em 1841. Fabricantes autríacos que emigraram para o México no final do século 19 levaram o estilo com eles. Vienna Lager é uma cerveja marrom avermelhada ou cobre com corpo médio e levemente adocicada. O aroma e sabor do malte tem uma característica mais tostada. Apesar do nome Vienna Lagers não são comuns no continente Europeu, mas podem ser encontradas frequentemente na América do Norte. As versões americanas tendem a ser mais fortes, secas e amargas, enquanto que as versões europeias tendem a ser mais doces.</string>
    <string name="txtDescricaoPilsener">É um tipo de cerveja Lager originária da cidade de Pilsen, na Boêmia, atual República Checa, por volta de 1840. É fabricada a partir de malte tipo Pilsen, lúpulo Saaz e água de baixa dureza, fermentados por levedo de baixa fermentação. Possui aroma rico e complexo do malte com um toque floral proveniente do lúpulo, sabor complexo do malte combinado com um amargor sutil do lúpulo,de baixo teor alcoólico (4~5%). É transparente e amarela, beirando o dourado, mas sua espuma é opaca e branca devido ao espalhamento da luz no espaço entre a bebida e as bolhas de ar. O estilo Pilsen é muitas vezes utilizado nos rótulos de cervejas Standard American Lager, mas diferenciam-se dessas por não utilizar adjuntos (arroz e milho) e por utilizar exclusivamente lúpulo do tipo Saaz, gerando uma cerveja com aroma mais rico e complexo.</string>
    <string name="txtDescricaoPremium">Outro sub-tipo de Lager, são cervejas um pouco mais lupuladas e mais maltadas que as Standard Lagers, tem como exemplos a Stella Artois, Heineken e Miller Genuine Draft, facilmente encontradas. Aqui no Brasil, são representadas pela Cerpa, Brahma Extra e outras variações das marcas mais conhecidas. Mas cuidado, em alguns casos a palavra Premium vem sendo usada para diferenciar cervejas que suas cervejarias desejam promover em especial, não sendo necessariamente uma Premium de verdade, pode simplesmente significar Lagers com graduação alcoólica acima de 5%.</string>
</resources>